syntax = "proto3";

package semver;

service versionSemver {
    rpc Generate(GenerateRequest) returns (GenerateResponse) {}
}

message GenerateRequest {
    uint64 projectId = 1;
    uint32 major = 2;
    uint32 minor = 3;
    string branch = 4;
}

message GenerateResponse {
    string version = 1;
}
